# todoroc

./: Cargo.toml  Makefile  README.md  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  db.rs  due_date.rs  embeddings.rs  github.rs  jira.rs  main.rs  models.rs  setup.rs  sync.rs
src/ui/: briefing.rs  mod.rs  search.rs  todos.rs  topics.rs
