[package]
name = "todoroc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tract-onnx = "0.21"
tract-nnef = "0.21"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ureq = { version = "2", features = ["tls"] }
indicatif = { version = "0.17", features = ["improved_unicode"] }
dirs = "6.0.0"
arboard = "3"
rusqlite_migration = "1"
